--- a/AppsTesting/pom.xml
+++ b/AppsTesting/pom.xml
@@ -16,6 +16,8 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <karate.version>0.9.5</karate.version>
         <surefire.version>2.22.2</surefire.version>
+        <spring-jdbc.version>5.2.5.RELEASE</spring-jdbc.version>
+        <mysql-connector.version>8.0.19</mysql-connector.version>
     </properties>
 
     <dependencies>
@@ -30,6 +32,16 @@
             <artifactId>karate-junit5</artifactId>
             <version>${karate.version}</version>
             <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+            <version>${spring-jdbc.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>${mysql-connector.version}</version>
         </dependency>
     </dependencies>
 
