--- a/AppsTesting/pom.xml
+++ b/AppsTesting/pom.xml
@@ -20,6 +20,8 @@
         <mysql-connector.version>8.0.19</mysql-connector.version>
         <kafa-clients.version>2.5.0</kafa-clients.version>
         <json.version>20190722</json.version>
+        <commons-io.version>2.6</commons-io.version>
+        <cucumber-reporting.version>5.2.1</cucumber-reporting.version>
     </properties>
 
     <dependencies>
@@ -54,6 +56,16 @@
             <groupId>org.json</groupId>
             <artifactId>json</artifactId>
             <version>${json.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>${commons-io.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>net.masterthought</groupId>
+            <artifactId>cucumber-reporting</artifactId>
+            <version>${cucumber-reporting.version}</version>
         </dependency>
     </dependencies>
 
